# multi_rotors_ftc

multi_rotors_description/: CMakeLists.txt  fati_ardrone_base.xacro  package.xml
multi_rotors_description/urdf/: ardrone.xacro  ardrone_Normal.xacro  ardrone_base.xacro  ardrone_generic_odometry_sensor.gazebo  ardrone_mbzirc_sensors.gazebo  component_snippets.xacro  fati_ardrone_base.xacro  fati_ardrone_base.xacro~  multirotor_base.xacro
multi_rotors_ftc/: CMakeLists.txt  CMakeLists.txt_  package.xml
multi_rotors_gazebo/: CMakeLists.txt  package.xml
multi_rotors_gazebo/launch/: fati.launch  fati.launch~  fati_hovering_example.launch  fati_hovering_example.launch~  fati_spawn_ardrone.launch  hover.launch
multi_rotors_gazebo/resource/: fati_firefly.yaml  lee_controller_fati.yaml
multi_rotors_gazebo/src/: hovering_example.cpp
mutli_rotors_description/: package.xml
mutli_rotors_gazebo/: CMakeLists.txt  package.xml
rotors_control/: CMakeLists.txt  package.xml
rotors_control/include/rotors_control/: kuri_ftc.h
rotors_control/src/nodes/: kuri_ftc_node.cpp  kuri_ftc_node.h  lee_position_controller_node.cpp  lee_position_controller_node.h  lee_position_controller_node_F.cpp  lee_position_controller_node_noF.cpp
