<?xml version="1.0"?>
<package>
  <name>multi_rotors_ftc</name>
  <version>0.1.0</version>
  <description>Multi-rotors fault tolerance control</description>

  <maintainer email="tarek.taha@kustar.ac.ae">Tarek Taha</maintainer>

  <author>Tarek Taha</author>
  <author>Fatima Khoury</author>

  <license>LGPL v3.0</license>

  <url type="website">https://github.com/kuri-kustar/multi_rotors_ftc</url>
  <url type="bugtracker">https://github.com/kuri-kustar/multi_rotors_ftc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>multi_rotors_description</run_depend>
  <run_depend>multi_rotors_gazebo</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>