<package>
  <name>multi_rotors_ftc_gazebo</name>
  <version>0.0.1</version>
  <description>Multi-rotors fault tolerance control - gazebo simulation environments</description>

  <maintainer email="tarek.taha@kustar.ac.ae">Tarek Taha</maintainer>

  <author>Tarek Taha</author>
  <author>Fatima Khoury</author>

  <license>LGPLv3</license>

  <url type="website">https://github.com/kuri-kustar/multi_rotors_ftc</url>
  <url type="bugtracker">https://github.com/kuri-kustar/multi_rotors_ftc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>
  </export>
</package> 
